--- a/Finances.Web/Views/index.html
+++ b/Finances.Web/Views/index.html
@@ -8,7 +8,7 @@
     <script src="/Content/Scripts/app.js"></script>
 </head>
 <body>
-    <p><a href="/Onet">Onet.pl</a></p>
+    <p><a href="/Onet">www.onet.pl</a></p>
 
     <p><a id="exit" href="/Exit">Close application</a></p>
 
