Models, API, Dependency Injection, so much fun!

--- a/Finances.Web/Views/index.html
+++ b/Finances.Web/Views/index.html
@@ -10,8 +10,9 @@
 <body>
     <p><a href="/Onet">Onet.pl</a></p>
 
-    <p><a id="exit" href="/Exit">Close application</a></p>
-
+    <p><a class="exit-application" href="/Exit">Close application</a></p>
+    <p><a href="/api/account" target="_blank">/api/account</a></p>
+    <p><a href="/api/account/1" target="_blank">/api/account/1</a></p>
 
     <div class='liveExample'>
 
