--- a/Finances.Web/Views/index.html
+++ b/Finances.Web/Views/index.html
@@ -13,6 +13,7 @@
     <p><a class="exit-application" href="/Exit">Close application</a></p>
     <p><a href="/api/account" target="_blank">/api/account</a></p>
     <p><a href="/api/account/1" target="_blank">/api/account/1</a></p>
+    <p><a href="/About">About</a></p>
 
     <div class='liveExample'>
 
